CPU, Memory & Replicas as Parameters

--- a/proactive-scheduler-openshift.yaml
+++ b/proactive-scheduler-openshift.yaml
@@ -48,8 +48,8 @@ objects:
                 protocol: TCP
             resources:
               limits:
-                cpu: 1
-                memory: 6Gi
+                cpu: ${SCHEDULER_CPU}
+                memory: ${SCHEDULER_MEMORY}
             terminationMessagePath: /dev/termination-log
             terminationMessagePolicy: File
             volumeMounts:
@@ -80,7 +80,7 @@ objects:
   metadata:
     name: proactive-node
   spec:
-    replicas: 4
+    replicas: ${NODE_REPLICAS}
     selector:
       name: proactive-node
     strategy:
@@ -103,8 +103,8 @@ objects:
                 protocol: TCP
             resources:
               limits:
-                cpu: 1
-                memory: 2Gi
+                cpu: ${NODE_CPU}
+                memory: ${NODE_MEMORY}
             terminationMessagePath: /dev/termination-log
             terminationMessagePolicy: File
             volumeMounts:
@@ -190,7 +190,27 @@ parameters:
   value: "activeeon/proactive-scheduler:8.4.0-SNAPSHOT-trial"
   name: SCHEDULER_IMAGE
   required: true
+- displayName: Proactive Scheduler CPU
+  value: "1"
+  name: SCHEDULER_CPU
+  required: true
+- displayName: Proactive Scheduler Memory
+  value: "6Gi"
+  name: SCHEDULER_MEMORY
+  required: true
 - displayName: Proactive Node Image
   value: "activeeon/proactive-node:8.4.0-SNAPSHOT-trial"
   name: NODE_IMAGE
+  required: true
+- displayName: Proactive Node Replicas
+  value: "4"
+  name: NODE_REPLICAS
+  required: true
+- displayName: Proactive Node CPU
+  value: "1"
+  name: NODE_CPU
+  required: true
+- displayName: Proactive Node Memory
+  value: "2Gi"
+  name: NODE_MEMORY
   required: true
